--- a/index.html
+++ b/index.html
@@ -3,30 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="love Running. Club for runners in Dublin, Ireland, Urban running, trail running. Dublin docklands and Phoenix Park">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta
+      name="description"
+      content="love Running. Club for runners in Dublin, Ireland, Urban running, trail running. Dublin docklands and Phoenix Park"
+    />
+    <meta
+      name="keywords"
+      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
+    />
     <title>Love Running</title>
     <!-- Favicon-->
-     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip 2/apple-touch-icon.png">
-     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip 2/favicon-32x32.png">
-     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip 2/favicon-16x16.png">
-     <link rel="stylesheet" href="assets/css/style.css">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon-zip 2/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon-zip 2/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon-zip 2/favicon-16x16.png"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  
+
   <body>
     <!--Header-->
     <header>
-        <a href="index.html">
-            <h1 id="logo">Love Running</h1>
-            <nav>  
-                <ul id="menu">
-                    <li><a href="" class="active">Home</a></li>
-                    <li><a href="">Gallery</a></li>
-                    <li><a href="">Sign Up</a></li>
-                </ul>
-            </nav>
-        </a>
-
+      <a href="index.html">
+        <h1 id="logo">Love Running</h1>
+      </a>
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <nav>
+        <ul id="menu">
+          <li><a href="" class="active">Home</a></li>
+          <li><a href="">Gallery</a></li>
+          <li><a href="">Sign Up</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!--Main content-->
