--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     </header>
 
     <!--Main content-->
-    <main>Main Content</main>
+    <main>
+      <section id="hero"></section>
+    </main>
 
     <!--Footer-->
     <footer>
@@ -64,7 +66,7 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"
-            ><i class="fa-brands fa-facebook-f"></i
+            ><i class="blob:https://fontawesome.com/988a7834-9b0e-4e61-bbe1-d635c36c8eb5"></i
           ></a>
         </li>
         <li>
@@ -73,7 +75,7 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Twitter page (opens in a new tab)"
-            ><i class="fa-brands fa-twitter"></i
+            ><i class="blob:https://fontawesome.com/e839f553-507d-4130-9feb-a02951d34cfd"></i
           ></a>
         </li>
         <li>
@@ -82,7 +84,7 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our YouTube page (opens in a new tab)"
-            ><i class="fa-brands fa-youtube"></i
+            ><i class="blob:https://fontawesome.com/554e0579-de09-4e5f-b09b-e246d14d27f0"></i
           ></a>
         </li>
         <li>
@@ -91,8 +93,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Instagram page (opens in a new tab)"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
+            ></a><i class="blob:https://fontawesome.com/07a3e85c-48be-4a4f-8dd0-a52349523133"></i>
+          </a>
         </li>
       </ul>
     </footer>
