--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,43 @@
     </header>
 
     <!--Main content-->
-    <main>Main Content</main>
+    <main>
+      <section id="gallery"></section>
+      <div id="photos">
+        <img src="assets/images/athletes.webp" alt="Two athletes running" />
+        <img
+          src="assets/images/gallery-images 2/girls.webp"
+          alt="Three girls at charity paint running festival"
+        />
+        <img
+          src="assets/images/gallery-images 2/runner3.webp"
+          alt="Solo male runner jogging on beach"
+        />
+        <img
+          src="assets/images/gallery-images 2/man.webp"
+          alt="Man at charity paint running festival"
+        />
+        <img
+          src="assets/images/gallery-images 2/runner1.webp"
+          alt="Solo female runner jogging through Phoenix Park"
+        />
+        <img
+          src="assets/images/gallery-images 2/runner2.webp"
+          alt="Runners competing in marathon"
+        />
+        <img
+          src="assets/images/gallery-images 2/runner4.webp"
+          alt="Solo female runner jogging on beach"
+        />
+        <img
+          src="assets/images/gallery-images 2/running_gang.webp"
+          alt="Large group of runners taking part in a marathon on a rainy day"
+        />
+        <img
+          src="assets/images/gallery-images 2/mud-run.webp"
+          alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+      </div>
+    </main>
 
     <!--Footer-->
     <footer>
