--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,59 @@
     </header>
 
     <!--Main content-->
-    <main>Main Content</main>
+    <main>
+      <section id="signup">
+        <form
+          id="signup-form"
+          method="POST"
+          action="https://formdump.codeinstitute.net"
+        ></form>
+        <h2><i class="fa-solid fa-heartbeat"></i>Let's get you signed up!</h2>
+        <label for="first-name">First Name</label>
+        <input
+          type="text"
+          name="first_name"
+          id="first-name"
+          class="text-input"
+          required
+        />
+        <br />
+        <label for="last-name">Last Name</label>
+        <input
+          type="text"
+          name="last_name"
+          id="last-name"
+          class="text-input"
+          required
+        />
+        <br />
+        <label for="email-address">Email Address</label>
+        <input
+          type="email"
+          name="email_address"
+          id="email-address"
+          class="text-input"
+          required
+        />
+        <div class="radio-buttons">
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
+<div>
+    <label for="road">Road</label>
+    <input type="radio" name="running_preference" id="road" value="road" required checked>
+   
+    <label for="trail">Trail</label>
+    <input type="radio" name="running_preference" id="trail" value="trail" required checked>
+   
+    <label for="both">Both</label>
+    <input type="radio" name="running_preference" id="both" value="both" required checked>
+</div>
+<button type="submit" class="join-button">Let's Run!</button>
+        <br />
+      </section>
+    </main>
 
     <!--Footer-->
     <footer>
@@ -64,7 +116,7 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"
-            ><i class="fa-brands fa-facebook-f"></i
+            ><i class="fa-brands fa-facebook"></i
           ></a>
         </li>
         <li>
