--- a/gallery.html
+++ b/gallery.html
@@ -55,6 +55,7 @@
     <!--Main content-->
     <main>
       <section id="gallery"></section>
+      <h2 class="hidden-heading">Gallery</h2>
       <div id="photos">
         <img src="assets/images/athletes.webp" alt="Two athletes running" />
         <img
