--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="love Running. Club for runners in Dublin, Ireland, Urban running, trail running. Dublin docklands and Phoenix Park"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description"
+      content="love Running. Club for runners in Dublin, Ireland, Urban running, trail running. Dublin docklands and Phoenix Park"/>
     <meta
       name="keywords"
-      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
-    />
+      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"/>
     <title>Love Running</title>
     <!-- Favicon-->
     <link
@@ -30,7 +27,7 @@
       sizes="16x16"
       href="assets/favicon-zip 2/favicon-16x16.png"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"/>
   </head>
 
   <body>
